# CMake-CSharp-Cpp-Interop

./: CMakeLists.txt
cpp_lib/: lib.cpp  lib.h
csharp_exe/: CMakeLists.txt  Program.cs
